--- a/blocks/card/__like/card__like.css
+++ b/blocks/card/__like/card__like.css
@@ -1,5 +1,5 @@
 .card__like {
-  background-image: url(../../../images/like.png);
+  background-image: url(../../../images/like.svg);
   width: 21px;
   height: 18px;
   background-repeat: no-repeat;
