--- a/blocks/popup/__input-item/popup__input-item.css
+++ b/blocks/popup/__input-item/popup__input-item.css
@@ -1,6 +1,7 @@
 .popup__input-item {
   margin: 20px auto 0;
-  min-height: 40px;
+ /*  min-height: 40px; */
+  padding-bottom: 13px;
   width: 358px;
   border-color: rgba(0, 0, 0, 0.2);
   border-top: none;
