--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,8 +1,8 @@
 .popup__input {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   width: 100%;
-  min-height: 90px;
   justify-content: space-between;
+  padding: 25px 0 0;
 }
 
