--- a/blocks/profile/__column/profile__column.css
+++ b/blocks/profile/__column/profile__column.css
@@ -1,5 +1,6 @@
 .profile__column {
   margin-left: 30px;
+/*   grid-template-columns: repeat(auto-fit, minmax(1fr, 24px)); */
 }
 
 @media screen and (max-width: 929px) {
