--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,5 +1,5 @@
 .popup__close-button {
-  background-image: url(../../../images/Close\ Icon.png);
+  background-image: url(../../../images/close.svg);
   color: #fff;
   width: 50px;
   height: 50px;
@@ -30,28 +30,3 @@
     right: -20px;
   }
 }
-
-/* .popup__close-button:before {
-  content: '';
-  display: block;
-  background-color: #000;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  opacity: 0;
-  transition: opacity 0.7s ease;
-}
-
-.popup__close-button:hover:before{
-  content: '';
-  display: block;
-  background-color: #000;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  opacity: 0.3;
-} */
