--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,17 +1,15 @@
 .profile__add-button {
-/*   background-image: url(../../../images/Add_Button.svg); */
+  background-image: url(../../../images/plus.svg);
   width: 150px;
   height: 50px;
-/*   background-size: cover;
-  background-repeat: no-repeat;
-  background-color: transparent; */
   border: 2px solid #FFFFFF;
   box-sizing: border-box;
   color: #fff;
   border-radius: 2px;
+  background-size: 24px;
+  background-repeat: no-repeat;
   background-color: transparent;
-  font-size: 33px;
-  font-weight: 100;
+  background-position: center;
 }
 
 .profile__add-button:hover {
@@ -22,5 +20,7 @@
 @media screen and (max-width: 929px) {
   .profile__add-button {
     width: 282px;
+    margin-top: 36px;
+    background-size: 16px;
   }
 }
