--- a/blocks/profile/__column/profile__column.css
+++ b/blocks/profile/__column/profile__column.css
@@ -1,10 +1,21 @@
 .profile__column {
   margin-left: 30px;
-/*   grid-template-columns: repeat(auto-fit, minmax(1fr, 24px)); */
+  max-width: 336px;
+  display: grid;
+  grid-template-columns: 329px 24px;
+  grid-template-rows: minmax(min-content, max-content);
+  gap: 16px 17px;
+  /*   align-items: baseline; */
 }
 
 @media screen and (max-width: 929px) {
   .profile__column {
     margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .profile__column {
+    grid-template-columns: 201px 18px;
   }
 }
