--- a/blocks/profile/__status/profile__status.css
+++ b/blocks/profile/__status/profile__status.css
@@ -2,11 +2,13 @@
   font-weight: normal;
   font-size: 18px;
   line-height: 22px;
-  margin: 16px 0 25px 0;
-  max-width: 400px;
+  margin: 0;
+  max-width: 336px;
   overflow:hidden;
   white-space:nowrap;
   text-overflow: ellipsis;
+  align-self: flex-end;
+   /*  margin: 16px 0 25px 0; */
 }
 
 @media screen and (max-width: 929px) {
