--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -1,4 +1,7 @@
 .card__image {
   width: 100%;
   min-height: 282px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
