--- a/blocks/card/__like/card__like.css
+++ b/blocks/card/__like/card__like.css
@@ -8,6 +8,8 @@
   background-color: transparent;
   margin-right: 20px;
   padding: 0;
+  opacity: 1;
+  transition: opacity 0.7s ease;
 }
 
 .card__like:hover {
