--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -5,10 +5,5 @@
   grid-template-columns: repeat(auto-fit, minmax(282px, 282px));
   gap: 20px 18px;
   justify-content: center;
+  padding: 0;
 }
-
-/* @media (min-width: 769px) and (max-width: 1024px) {
-  .cards {
-    gap: 14px;
-  }
-} */
