--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,13 @@
 .footer {
   max-width: 882px;
   margin: 0 auto;
-  padding-top: 5.2%;
-  padding-bottom: 4.7%;
+  padding-top: 66px;
+  padding-bottom: 60px;
+}
+
+@media screen and (max-width: 585px) {
+  .footer {
+    padding-top: 48px;
+    padding-bottom: 36px;
+  }
 }
