--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -8,4 +8,11 @@
   justify-content: center;
   align-items: center;
   display: none;
+  font-family: 'Inter', 'Arial' , sans-serif;
+  text-rendering: optimizeLegibility;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
 }
