--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -10,6 +10,8 @@
   background-repeat: no-repeat;
   background-color: transparent;
   background-position: center;
+  opacity: 1;
+  transition: opacity 0.7s ease;
 }
 
 .profile__add-button:hover {
