--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,5 +1,5 @@
 .profile__avatar{
-  background-image: url(../../../images/avatar.png);
+/*   background-image: url(../../../images/avatar.png); */
   min-width: 120px;
   min-height: 120px;
   border-radius: 100%;
