--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,5 +1,5 @@
 .profile__edit-button {
-  background-image: url(../../../images/Edit_Button.svg);
+  background-image: url(../../../images/edit_button.svg);
   width: 24px;
   height: 24px;
   background-repeat: no-repeat;
@@ -8,7 +8,8 @@
   border: unset;
   align-self: end;
   padding: 0;
-  /*   margin-left: 17px; */
+  opacity: 1;
+  transition: opacity 0.7s ease;
 }
 
 .profile__edit-button:hover {
@@ -20,6 +21,5 @@
   .profile__edit-button {
     width: 18px;
     height: 18px;
-    margin-left: 5px;
   }
 }
