--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   display: none;
-  font-family: 'Inter', 'Arial' , sans-serif;
+  font-family: "Inter", "Arial", sans-serif;
   text-rendering: optimizeLegibility;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
