--- a/pages/index.css
+++ b/pages/index.css
@@ -1,32 +1,30 @@
-@import url('../vendor/normalize.css');
-@import url('../vendor/Fonts/inter.css');
-@import url('../blocks/page/page.css');
-@import url('../blocks/page/page_overflow_hidden.css');
-@import url('../blocks/header/header.css');
-@import url('../blocks/logo/logo.css');
-@import url('../blocks/content/content.css');
-@import url('../blocks/profile/profile.css');
-@import url('../blocks/profile/__info/profile__info.css');
-@import url('../blocks/profile/__avatar/profile__avatar.css');
-@import url('../blocks/profile/__column/profile__column.css');
-@import url('../blocks/profile/__name/profile__name.css');
-@import url('../blocks/profile/__status/profile__status.css');
-@import url('../blocks/profile/__edit-button/profile__edit-button.css');
-@import url('../blocks/profile/__add-button/profile__add-button.css');
-@import url('../blocks/cards/cards.css');
-@import url('../blocks/card/card.css');
-@import url('../blocks/card/__image/card__image.css');
-@import url('../blocks/card/__title/card__title.css');
-@import url('../blocks/card/__like/card__like.css');
-@import url('../blocks/card/__column/card__column.css');
-@import url('../blocks/footer/footer.css');
-@import url('../blocks/footer/__text/footer__text.css');
-@import url('../blocks/popup/popup.css');
-@import url('../blocks/popup/__container/popup__container.css');
-@import url('../blocks/popup/_is-opened/popup_is-opened.css');
-@import url('../blocks/popup/__close-button/popup__close-button.css');
-@import url('../blocks/popup/__title/popup__title.css');
-@import url('../blocks/popup/__input/popup__input.css');
-@import url('../blocks/popup/__input-item/popup__input-item.css');
-@import url('../blocks/popup/__save-button/popup__save-button.css');
-
+@import url("../vendor/normalize.css");
+@import url("../vendor/Fonts/inter.css");
+@import url("../blocks/page/page.css");
+@import url("../blocks/header/header.css");
+@import url("../blocks/logo/logo.css");
+@import url("../blocks/content/content.css");
+@import url("../blocks/profile/profile.css");
+@import url("../blocks/profile/__info/profile__info.css");
+@import url("../blocks/profile/__avatar/profile__avatar.css");
+@import url("../blocks/profile/__column/profile__column.css");
+@import url("../blocks/profile/__name/profile__name.css");
+@import url("../blocks/profile/__status/profile__status.css");
+@import url("../blocks/profile/__edit-button/profile__edit-button.css");
+@import url("../blocks/profile/__add-button/profile__add-button.css");
+@import url("../blocks/cards/cards.css");
+@import url("../blocks/card/card.css");
+@import url("../blocks/card/__image/card__image.css");
+@import url("../blocks/card/__title/card__title.css");
+@import url("../blocks/card/__like/card__like.css");
+@import url("../blocks/card/__column/card__column.css");
+@import url("../blocks/footer/footer.css");
+@import url("../blocks/footer/__text/footer__text.css");
+@import url("../blocks/popup/popup.css");
+@import url("../blocks/popup/__container/popup__container.css");
+@import url("../blocks/popup/_is-opened/popup_is-opened.css");
+@import url("../blocks/popup/__close-button/popup__close-button.css");
+@import url("../blocks/popup/__title/popup__title.css");
+@import url("../blocks/popup/__input/popup__input.css");
+@import url("../blocks/popup/__input-item/popup__input-item.css");
+@import url("../blocks/popup/__save-button/popup__save-button.css");
