--- a/pages/index.css
+++ b/pages/index.css
@@ -28,3 +28,4 @@
 @import url("../blocks/popup/__input/popup__input.css");
 @import url("../blocks/popup/__input-item/popup__input-item.css");
 @import url("../blocks/popup/__save-button/popup__save-button.css");
+@import url("../blocks/card/__like/card__like_clicked.css");
