--- a/pages/index.css
+++ b/pages/index.css
@@ -29,3 +29,8 @@
 @import url("../blocks/popup/__input-item/popup__input-item.css");
 @import url("../blocks/popup/__save-button/popup__save-button.css");
 @import url("../blocks/card/__like/card__like_clicked.css");
+@import url("../blocks/card/__delete/card__delete.css");
+@import url("../blocks/popup/__image/popup__image.css");
+@import url("../blocks/popup/__text/popup__text.css");
+@import url("../blocks/popup/__image/popup__image-open.css");
+@import url("../blocks/popup/__wraper/popup__wraper.css");
