--- a/blocks/popup/__image/popup__image.css
+++ b/blocks/popup/__image/popup__image.css
@@ -1,9 +1,4 @@
 .popup__image {
-  /*   background-image: url(../../../images/vyazemBig.jpg); */
-  /* width: 100%; */
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  max-width: 816px;
-  min-height: 540px;
+  max-width: 75vw;
+  max-height: 75vh;
 }
