--- a/blocks/popup/__wraper/popup__wraper.css
+++ b/blocks/popup/__wraper/popup__wraper.css
@@ -1,7 +1,7 @@
 .popup__wraper {
   text-align: center;
   position: relative;
-  max-width: 816px;
-  max-height: 540px;
+  max-width: 75vw;
+  max-height: 75vh;
   margin: auto;
 }
