--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,7 +7,7 @@
   left: 0;
   justify-content: center;
   align-items: center;
-  display: none;
+  display: flex;
   font-family: "Inter", "Arial", sans-serif;
   text-rendering: optimizeLegibility;
   -moz-osx-font-smoothing: grayscale;
@@ -15,4 +15,7 @@
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.5s, visibility 0.5s ease;
 }
