--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -17,5 +17,5 @@
   -moz-text-size-adjust: 100%;
   visibility: hidden;
   opacity: 0;
-  /*   transition: opacity 0.5s, visibility 0.5s ease; */
+  transition: opacity 0.5s, visibility 0s ease;
 }
