--- a/pages/index.css
+++ b/pages/index.css
@@ -34,3 +34,6 @@
 @import url("../blocks/popup/__text/popup__text.css");
 @import url("../blocks/popup/__image/popup__image-open.css");
 @import url("../blocks/popup/__wraper/popup__wraper.css");
+@import url("../blocks/popup/__input-error/popup__input-error.css");
+@import url("../blocks/popup/__input-error/popup__input-error_active.css");
+@import url("../blocks/popup/__save-button/popup__save-button_disabled.css");
