--- a/pages/index.css
+++ b/pages/index.css
@@ -37,3 +37,4 @@
 @import url("../blocks/popup/__input-error/popup__input-error.css");
 @import url("../blocks/popup/__input-error/popup__input-error_active.css");
 @import url("../blocks/popup/__save-button/popup__save-button_disabled.css");
+@import url("../blocks/popup/__input-item/popup__input-item_invalid.css");
