--- a/blocks/popup/__input-item/popup__input-item.css
+++ b/blocks/popup/__input-item/popup__input-item.css
@@ -7,6 +7,7 @@
   border-left: none;
   border-right: none;
   outline: none;
+  outline-offset: 0;
   font-weight: normal;
   font-size: 14px;
   line-height: 17px;
