--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,8 +1,9 @@
 .profile__avatar {
+  position: relative;
   min-width: 120px;
   min-height: 120px;
   border-radius: 100%;
   background-size: cover;
   display: block;
-  background-image: url(../../../images/avatar.png);
+  /* background-image: url(../../../images/avatar.png); */
 }
