--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -38,3 +38,6 @@
 @import url("../blocks/popup/__input-error/popup__input-error_active.css");
 @import url("../blocks/popup/__save-button/popup__save-button_disabled.css");
 @import url("../blocks/popup/__input-item/popup__input-item_invalid.css");
+@import url("../blocks/profile/__avatar/profile__avatar-edit.css");
+@import url("../blocks/card/__like/card__like-wrapper.css");
+@import url("../blocks/card/__like/card__like-counter.css");
